--- a/firmware/主板固件.md
+++ b/firmware/主板固件.md
@@ -6,11 +6,15 @@ PC的固件有两种：BIOS和UEFI
 
 ## BIOS
 
-Basic Input/Output System，基本输入输出系统，IBM PC兼容机的通用固件。BIOS是CPU开机后运行的第一个程序，会检查各个设备是否正常并初始化硬件，然后载入主引导记录。BIOS提供给DOS操作硬件的一个接口，但现代操作系统内核会自己实现操作硬件的过程。
+BIOS（Basic Input/Output System，基本输入/输出系统）这一术语来自于CP/M，一个Intel 8080机器上流行的操作系统,但是这里的BIOS与IBM有关。
 
-由于现代PC从IBM PC及其兼容机发展而来，各个部件的厂商相互竞争，没有任何一个组织或公司能控制PC的所有规范。在主板固件方面，IBM于1981年采用的BIOS标准事实上成为了IBM PC兼容机的固件标准。
+我们的电脑的祖先是IBM PC.IBM于1981年8月推出第一款个人计算机，IBM PC 5150,搭载5MHz主频的Intel 8088处理器,选配8087数学协处理器,搭载用于输出视频信号的CGA彩色显示适配器或MDA单色显示适配器,具有5.25英寸软盘驱动器,预装从微软授权的BASIC解释器和DOS操作系统.不同于严格保密,价格高昂的IBM大型机,IBM PC是由独立的开发项目组"象棋计划"完成的,项目组本着开放架构快速开发的观点设计了PC，几乎所有部件都是从第三方公司采购的。次年IBM还出售《IBM PC技术参考资料》，包含了全部硬件规范和BIOS的源代码。实际上，IBM PC中IBM独创且拥有知识产权的部件只有BIOS代码。
 
-然而，在开放IBM PC 硬件标准时，IBM并没有公布BIOS的源代码，当时的IBM PC兼容机的BIOS的代码几乎都是侵权的。数个PC兼容机销售商，都于1984年被IBM成功起诉侵犯版权，并被迫以不侵犯IBM版权的方式重新实现其BIOS。凤凰科技公司在同年7月宣布，他们可以提供自己BIOS的授权，其中明确强调了净室过程，因为凤凰科技的BIOS代码由一位从未接触英特尔微处理器的程序员编写。此次法律事件后，PC制造商大多采用现成的BIOS代码，而不是自己编写，这也奠定了AMI、Insyde及Phoenix三大BIOS厂商的地位。净室设计是一种以逆向工程然后重新创作以复制某项设计，但不会侵犯与原始设计相关的任何著作权的方法。净室设计会先让某人检查系统如何重新实现，并撰写一份规范。然后律师审查这份规范，确保其不包含受到版权保护的资料。最后由与原检查员无关的团队实现该规范。由于实现不同，这一定程度上加大了BIOS领域的混乱。
+由于合同的让步，IBM允许微软公司向其他计算机制造商授权DOS产品，尽管MS-DOS专为IBM PC设计而且和BIOS紧密相关。一些厂商开始生产IBM设计的硬件，如主板，CPU，内存，显示卡，正如现在的DIY硬件市场一样。一些生产商也开始销售整机，如Compaq（后来被惠普收购），Dell等公司，这些被称为IBM PC兼容机。这些厂商一般都搭载微软的MS-DOS操作系统（但很少再附带BASIC）。
+
+然而，在开放IBM PC 硬件标准时，IBM依然具有BIOS的版权，当时的IBM PC兼容机的BIOS的代码几乎都是侵权的。数个PC兼容机销售商，都于1984年被IBM成功起诉侵犯版权，并被迫以不侵犯IBM版权的方式重新实现其BIOS。Phoenix公司在同年7月宣布，他们可以提供自己BIOS的授权，其中明确强调了净室过程，因为Phoenix的BIOS代码由一位从未接触英特尔微处理器的程序员编写。此次法律事件后，PC制造商大多采用现成的BIOS代码，而不是自己编写，这也奠定了AMI、Insyde及Phoenix三大BIOS厂商的地位。净室设计是一种以逆向工程然后重新创作以复制某项设计，但不会侵犯与原始设计相关的任何著作权的方法。净室设计会先让某人检查系统如何重新实现，并撰写一份规范。然后律师审查这份规范，确保其不包含受到版权保护的资料。最后由与原检查员无关的团队实现该规范。由于实现不同，这一定程度上加大了BIOS领域的混乱。
+
+在Intel 80386以及Windows 3.0推出后，PC标准的掌控权来到了微软和Intel的手中，即Wintel联盟，IBM逐渐失去了市场控制力.各种硬件的规范经常由相关行业组成的标准委员会制定。例如USB由Intel和微软倡议，惠普，NEC，DELL加入，并组建USB开发者论坛来制定USB协议规范；VESA，视频电子标准协会，1989年由NEC和其他8家显卡厂商成立，并首先制定SVGA标准替代了IBM的专有VGA显示标准。其他的例如SATA，PCI-E，以太网都由相关的协议委员会制定。然而，BIOS从来没有标准出现，仅由3大BIOS厂商遵守默契和历史约定.随着硬件的进步，BIOS的16位代码充满的越来越多的hack，越来越难以发展。
 
 BIOS保存在EEPROM（电子抹除式可复写只读内存）上，而BIOS的设置保存在CMOS（互补式金属氧化物半导体，一种随机存取存储器）上，CMOS断电会失去内容，因此主板上会有一个纽扣电池提供时钟和CMOS的电力。BIOS可被更新，以增加主板功能，提高性能或修复问题。BIOS更新失败会导致计算机无法启动，现代主板含有这一情况发生时的应对方案，如双份BIOS，使用U盘还原BIOS。
 
@@ -18,11 +22,27 @@ BIOS保存在EEPROM（电子抹除式可复写只读内存）上，而BIOS的设
 
 #### 初始化硬件（自检)
 
-CPU开机后会自动执行BIOS的指令，检查内存、显卡、硬盘是否有问题，有问题就会在屏幕上显示，没有就会进行引导工作，BIOS的使命就完成了，但BIOS的一些代码仍会留在内存中供DOS使用（BIOS中断）
+PC在启动时会自动的将BIOS从存储芯片复制到内存，并执行其中的代码。
+
+其功能有检查重要硬件（如键盘控制器和键盘，软盘驱动器，硬盘的S.M.A.R.T.状态，显卡和内存的状态），并确保硬件正确的按顺序初始化.
+
+随后BIOS会按照设置寻找启动设备，如软盘/硬盘/光盘，并将检查启动设备的第一个扇区（主引导扇区，MBR）是否正确（512字节的最后2字节为0x55AA）.
+
+当找到可启动设备后,BIOS将引导扇区从启动设备复制到内存的0x7C00，然后CPU从0x7C00开始执行。
+
+即使后来的CPU支持32位保护模式或64位长模式，CPU也会以16位实模式启动。
 
 #### BIOS Setup
 
-即BIOS设置，可以更改硬件的一些设置，例如系统时间，硬盘工作模式（IDE/AHCI），是否开机打开小键盘……最常用的是更改启动设备的顺序。
+通常BIOS具有设置功能，能修改系统时间，硬盘工作模式（IDE/AHCI），是否开机打开小键盘，CPU和内存的频率，设置启动选项,启动设备的顺序等。
+
+#### BIOS服务
+
+除了初始化硬件并引导DOS（或其他操作系统）之外，BIOS还以中断的方式提供了许多硬件无关的抽象，这被称为BIOS服务。
+
+实模式程序可以调用BIOS服务访问软盘或磁盘(Int 13H),更改显示设置或输出字符(Int 10H)等.
+
+但是由于只能用于实模式，现代操作系统启动后不使用BIOS服务与硬件交互，仅DOS或者实模式的引导程序使用BIOS服务。
 
 ### 主引导记录、分区表、扩展分区
 
@@ -245,7 +265,7 @@ Windows的引导：主板POST->MBR->PBR->BOOTMGR->/BOOT/BCD->winload.exe->ntoskr
 
 Ubuntu的引导：主板POST->MBR->grub/grubfordos->menu.list->vmlinuz->initrd
 
-###BIOS被取代的原因
+### BIOS被取代的原因
 
 早期的BIOS专为DOS设计，MBR直接启动DOS系统的IO.SYS，Windows3.x，9x时代，启动流程就变成MBR->IO.SYS->win.exe,而NT5时代，则又是MBR->PBR->NTLDR->ntoskrnl.exe，NT6继续进化成MBR->PBR->BOOTMGR->winload.exe->ntoskrnl.exe。
 
